
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* Malloc (int) ;
 int rand () ;
 int srand (int ) ;
 int time (int *) ;

char *random_string(void)
{
    int i;
    char *s = Malloc(7 * sizeof(char));

    srand(time(((void*)0)));
    for(i = 0; i < 6; i++)
        s[i] = (rand() % (122 - 97)) + 97;

    s[i] = 0x0;
    return s;
}
