; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_20731.c_random_string.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_20731.c_random_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @random_string() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = call i8* @Malloc(i32 7)
  store i8* %3, i8** %2, align 8
  %4 = call i32 @time(i32* null)
  %5 = call i32 @srand(i32 %4)
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %18, %0
  %7 = load i32, i32* %1, align 4
  %8 = icmp slt i32 %7, 6
  br i1 %8, label %9, label %21

9:                                                ; preds = %6
  %10 = call i32 (...) @rand()
  %11 = srem i32 %10, 25
  %12 = add nsw i32 %11, 97
  %13 = trunc i32 %12 to i8
  %14 = load i8*, i8** %2, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %14, i64 %16
  store i8 %13, i8* %17, align 1
  br label %18

18:                                               ; preds = %9
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %6

21:                                               ; preds = %6
  %22 = load i8*, i8** %2, align 8
  %23 = load i32, i32* %1, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8, i8* %22, i64 %24
  store i8 0, i8* %25, align 1
  %26 = load i8*, i8** %2, align 8
  ret i8* %26
}

declare dso_local i8* @Malloc(i32) #1

declare dso_local i32 @srand(i32) #1

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
